fix(index); dark block spacing improve

--- a/static/js/page/index/kotlin-intro-section.scss
+++ b/static/js/page/index/kotlin-intro-section.scss
@@ -11,9 +11,10 @@
   text-align: right;
 }
 
-.kotlin-intro-section__supports .kto-link,
-.kotlin-intro-section__supports .kto-link:hover {
-    color: rgba(255,255,255,.65);
+.kotlin-intro-section__link,
+.kotlin-intro-section__link:hover {
+  color: rgba(255,255,255,.65);
+  margin-left: 8px;
 }
 
 .kotlin-intro-actions {
